// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sidebar abbreviates durations under a minute 1`] = `
<nav
  className="sc-AxhCb iWVPDl Sidebar-resources"
>
  <ul
    className="sc-AxhUy hFLisE"
  >
    <li
      className="sc-AxgMl sc-Axmtr IezSP isSelected"
    >
      <a
        className="sc-AxheI bUZbcE"
        href="/"
        onClick={[Function]}
      >
        <div
          className="sc-AxjAm hcburE isNone"
        >
          <span
            className="sc-AxirZ feYmtM"
          >
            7
          </span>
        </div>
        <p
          className="sc-AxmLO bqHpRS"
        >
          All
        </p>
      </a>
    </li>
    <li
      className="sc-AxgMl kiZofC  isBuilding"
    >
      <a
        className="sc-AxheI bUZbcE SidebarItem-link"
        href="/r/resource4"
        onClick={[Function]}
        title="resource4"
      >
        <div
          className="sc-AxjAm hcburE isBuilding"
        >
          <span
            className="sc-AxirZ feYmtM"
          >
            1
          </span>
        </div>
        <p
          className="sc-AxmLO bqHpRS"
        >
          <span
            className="sc-fzozJi jcfBR"
          >
            resource4
          </span>
        </p>
        <div
          className="sc-fzoLsD fjbaZw"
        >
          <span
            className="sc-fzplWN jEKYIa"
          >
            <time
              dateTime="2017-12-21T15:36:03.000Z"
              title="2017-12-21T15:36:03.000Z"
            >
              &lt;5s ago
            </time>
          </span>
          <span
            className="sc-fzpans clZIwH"
          >
            12.3s
          </span>
        </div>
      </a>
      <button
        className="sc-AxiKw gOpblw SidebarTriggerButton 
          "
        disabled={true}
        onClick={[Function]}
        title="Cannot trigger an update while resource is updating or update is pending."
      />
    </li>
    <li
      className="sc-AxgMl kiZofC  isBuilding"
    >
      <a
        className="sc-AxheI bUZbcE SidebarItem-link"
        href="/r/resource9"
        onClick={[Function]}
        title="resource9"
      >
        <div
          className="sc-AxjAm hcburE isBuilding"
        >
          <span
            className="sc-AxirZ feYmtM"
          >
            1
          </span>
        </div>
        <p
          className="sc-AxmLO bqHpRS"
        >
          <span
            className="sc-fzozJi jcfBR"
          >
            resource9
          </span>
        </p>
        <div
          className="sc-fzoLsD fjbaZw"
        >
          <span
            className="sc-fzplWN jEKYIa"
          >
            <time
              dateTime="2017-12-21T15:35:58.000Z"
              title="2017-12-21T15:35:58.000Z"
            >
              &lt;15s ago
            </time>
          </span>
          <span
            className="sc-fzpans clZIwH"
          >
            12.3s
          </span>
        </div>
      </a>
      <button
        className="sc-AxiKw gOpblw SidebarTriggerButton 
          "
        disabled={true}
        onClick={[Function]}
        title="Cannot trigger an update while resource is updating or update is pending."
      />
    </li>
    <li
      className="sc-AxgMl kiZofC  isBuilding"
    >
      <a
        className="sc-AxheI bUZbcE SidebarItem-link"
        href="/r/resource19"
        onClick={[Function]}
        title="resource19"
      >
        <div
          className="sc-AxjAm hcburE isBuilding"
        >
          <span
            className="sc-AxirZ feYmtM"
          >
            1
          </span>
        </div>
        <p
          className="sc-AxmLO bqHpRS"
        >
          <span
            className="sc-fzozJi jcfBR"
          >
            resource19
          </span>
        </p>
        <div
          className="sc-fzoLsD fjbaZw"
        >
          <span
            className="sc-fzplWN jEKYIa"
          >
            <time
              dateTime="2017-12-21T15:35:48.000Z"
              title="2017-12-21T15:35:48.000Z"
            >
              &lt;30s ago
            </time>
          </span>
          <span
            className="sc-fzpans clZIwH"
          >
            12.3s
          </span>
        </div>
      </a>
      <button
        className="sc-AxiKw gOpblw SidebarTriggerButton 
          "
        disabled={true}
        onClick={[Function]}
        title="Cannot trigger an update while resource is updating or update is pending."
      />
    </li>
    <li
      className="sc-AxgMl kiZofC  isBuilding"
    >
      <a
        className="sc-AxheI bUZbcE SidebarItem-link"
        href="/r/resource29"
        onClick={[Function]}
        title="resource29"
      >
        <div
          className="sc-AxjAm hcburE isBuilding"
        >
          <span
            className="sc-AxirZ feYmtM"
          >
            1
          </span>
        </div>
        <p
          className="sc-AxmLO bqHpRS"
        >
          <span
            className="sc-fzozJi jcfBR"
          >
            resource29
          </span>
        </p>
        <div
          className="sc-fzoLsD fjbaZw"
        >
          <span
            className="sc-fzplWN jEKYIa"
          >
            <time
              dateTime="2017-12-21T15:35:38.000Z"
              title="2017-12-21T15:35:38.000Z"
            >
              &lt;30s ago
            </time>
          </span>
          <span
            className="sc-fzpans clZIwH"
          >
            12.3s
          </span>
        </div>
      </a>
      <button
        className="sc-AxiKw gOpblw SidebarTriggerButton 
          "
        disabled={true}
        onClick={[Function]}
        title="Cannot trigger an update while resource is updating or update is pending."
      />
    </li>
    <li
      className="sc-AxgMl kiZofC  isBuilding"
    >
      <a
        className="sc-AxheI bUZbcE SidebarItem-link"
        href="/r/resource39"
        onClick={[Function]}
        title="resource39"
      >
        <div
          className="sc-AxjAm hcburE isBuilding"
        >
          <span
            className="sc-AxirZ feYmtM"
          >
            1
          </span>
        </div>
        <p
          className="sc-AxmLO bqHpRS"
        >
          <span
            className="sc-fzozJi jcfBR"
          >
            resource39
          </span>
        </p>
        <div
          className="sc-fzoLsD fjbaZw"
        >
          <span
            className="sc-fzplWN jEKYIa"
          >
            <time
              dateTime="2017-12-21T15:35:28.000Z"
              title="2017-12-21T15:35:28.000Z"
            >
              &lt;45s ago
            </time>
          </span>
          <span
            className="sc-fzpans clZIwH"
          >
            12.3s
          </span>
        </div>
      </a>
      <button
        className="sc-AxiKw gOpblw SidebarTriggerButton 
          "
        disabled={true}
        onClick={[Function]}
        title="Cannot trigger an update while resource is updating or update is pending."
      />
    </li>
    <li
      className="sc-AxgMl kiZofC  isBuilding"
    >
      <a
        className="sc-AxheI bUZbcE SidebarItem-link"
        href="/r/resource49"
        onClick={[Function]}
        title="resource49"
      >
        <div
          className="sc-AxjAm hcburE isBuilding"
        >
          <span
            className="sc-AxirZ feYmtM"
          >
            1
          </span>
        </div>
        <p
          className="sc-AxmLO bqHpRS"
        >
          <span
            className="sc-fzozJi jcfBR"
          >
            resource49
          </span>
        </p>
        <div
          className="sc-fzoLsD fjbaZw"
        >
          <span
            className="sc-fzplWN jEKYIa"
          >
            <time
              dateTime="2017-12-21T15:35:18.000Z"
              title="2017-12-21T15:35:18.000Z"
            >
              &lt;1m ago
            </time>
          </span>
          <span
            className="sc-fzpans clZIwH"
          >
            12.3s
          </span>
        </div>
      </a>
      <button
        className="sc-AxiKw gOpblw SidebarTriggerButton 
          "
        disabled={true}
        onClick={[Function]}
        title="Cannot trigger an update while resource is updating or update is pending."
      />
    </li>
    <li
      className="sc-AxgMl kiZofC  isBuilding"
    >
      <a
        className="sc-AxheI bUZbcE SidebarItem-link"
        href="/r/resource54"
        onClick={[Function]}
        title="resource54"
      >
        <div
          className="sc-AxjAm hcburE isBuilding"
        >
          <span
            className="sc-AxirZ feYmtM"
          >
            1
          </span>
        </div>
        <p
          className="sc-AxmLO bqHpRS"
        >
          <span
            className="sc-fzozJi jcfBR"
          >
            resource54
          </span>
        </p>
        <div
          className="sc-fzoLsD fjbaZw"
        >
          <span
            className="sc-fzplWN jEKYIa"
          >
            <time
              dateTime="2017-12-21T15:35:13.000Z"
              title="2017-12-21T15:35:13.000Z"
            >
              &lt;1m ago
            </time>
          </span>
          <span
            className="sc-fzpans clZIwH"
          >
            12.3s
          </span>
        </div>
      </a>
      <button
        className="sc-AxiKw gOpblw SidebarTriggerButton 
          "
        disabled={true}
        onClick={[Function]}
        title="Cannot trigger an update while resource is updating or update is pending."
      />
    </li>
  </ul>
</nav>
`;

exports[`sidebar renders empty resource list without crashing 1`] = `
<nav
  className="sc-AxhCb iWVPDl Sidebar-resources"
>
  <ul
    className="sc-AxhUy hFLisE"
  >
    <li
      className="sc-AxgMl sc-Axmtr IezSP isSelected"
    >
      <a
        className="sc-AxheI bUZbcE"
        href="/"
        onClick={[Function]}
      >
        <div
          className="sc-AxjAm hcburE isNone"
        >
          <span>
             
          </span>
        </div>
        <p
          className="sc-AxmLO bqHpRS"
        >
          All
        </p>
      </a>
    </li>
  </ul>
</nav>
`;

exports[`sidebar renders list of resources 1`] = `
<nav
  className="sc-AxhCb iWVPDl Sidebar-resources"
>
  <ul
    className="sc-AxhUy hFLisE"
  >
    <li
      className="sc-AxgMl sc-Axmtr IezSP isSelected"
    >
      <a
        className="sc-AxheI bUZbcE"
        href="/"
        onClick={[Function]}
      >
        <div
          className="sc-AxjAm hcburE isNone"
        >
          <span
            className="sc-AxirZ feYmtM"
          >
            2
          </span>
        </div>
        <p
          className="sc-AxmLO bqHpRS"
        >
          All
        </p>
      </a>
    </li>
    <li
      className="sc-AxgMl kiZofC  isBuilding"
    >
      <a
        className="sc-AxheI bUZbcE SidebarItem-link"
        href="/r/vigoda"
        onClick={[Function]}
        title="vigoda"
      >
        <div
          className="sc-AxjAm hcburE isBuilding"
        >
          <span
            className="sc-AxirZ feYmtM"
          >
            1
          </span>
        </div>
        <p
          className="sc-AxmLO bqHpRS"
        >
          <span
            className="sc-fzozJi jcfBR"
          >
            vigoda
          </span>
        </p>
        <div
          className="sc-fzoLsD fjbaZw"
        >
          <span
            className="sc-fzplWN jEKYIa"
          >
            <time
              dateTime="2017-12-21T15:36:07.000Z"
              title="2017-12-21T15:36:07.000Z"
            >
              &lt;5s ago
            </time>
          </span>
          <span
            className="sc-fzpans clZIwH"
          >
            12.3s
          </span>
        </div>
      </a>
      <button
        className="sc-AxiKw gOpblw SidebarTriggerButton 
          "
        disabled={true}
        onClick={[Function]}
        title="Cannot trigger an update while resource is updating or update is pending."
      />
    </li>
    <li
      className="sc-AxgMl kiZofC  isBuilding"
    >
      <a
        className="sc-AxheI bUZbcE SidebarItem-link"
        href="/r/snack"
        onClick={[Function]}
        title="snack"
      >
        <div
          className="sc-AxjAm hcburE isBuilding"
        >
          <span
            className="sc-AxirZ feYmtM"
          >
            1
          </span>
        </div>
        <p
          className="sc-AxmLO bqHpRS"
        >
          <span
            className="sc-fzozJi jcfBR"
          >
            snack
          </span>
        </p>
        <div
          className="sc-fzoLsD fjbaZw"
        >
          <span
            className="sc-fzplWN jEKYIa"
          >
            <time
              dateTime="2017-12-21T15:35:57.000Z"
              title="2017-12-21T15:35:57.000Z"
            >
              &lt;15s ago
            </time>
          </span>
          <span
            className="sc-fzpans clZIwH"
          >
            50.0s
          </span>
        </div>
      </a>
      <button
        className="sc-AxiKw gOpblw SidebarTriggerButton 
          "
        disabled={true}
        onClick={[Function]}
        title="Cannot trigger an update while resource is updating or update is pending."
      />
    </li>
  </ul>
</nav>
`;

exports[`sidebar renders resources that haven't been built yet 1`] = `
<nav
  className="sc-AxhCb iWVPDl Sidebar-resources"
>
  <ul
    className="sc-AxhUy hFLisE"
  >
    <li
      className="sc-AxgMl sc-Axmtr IezSP isSelected"
    >
      <a
        className="sc-AxheI bUZbcE"
        href="/"
        onClick={[Function]}
      >
        <div
          className="sc-AxjAm hcburE isNone"
        >
          <span
            className="sc-AxirZ feYmtM"
          >
            2
          </span>
        </div>
        <p
          className="sc-AxmLO bqHpRS"
        >
          All
        </p>
      </a>
    </li>
    <li
      className="sc-AxgMl kiZofC  isBuilding"
    >
      <a
        className="sc-AxheI bUZbcE SidebarItem-link"
        href="/r/vigoda"
        onClick={[Function]}
        title="vigoda"
      >
        <div
          className="sc-AxjAm hcburE isBuilding"
        >
          <span
            className="sc-AxirZ feYmtM"
          >
            1
          </span>
        </div>
        <p
          className="sc-AxmLO bqHpRS"
        >
          <span
            className="sc-fzozJi jcfBR"
          >
            vigoda
          </span>
        </p>
        <div
          className="sc-fzoLsD fjbaZw"
        >
          <span
            className="sc-fzplWN jEKYIa isEmpty"
          >
            —
          </span>
          <span
            className="sc-fzpans clZIwH isEmpty"
          >
            —
          </span>
        </div>
      </a>
      <button
        className="sc-AxiKw gOpblw SidebarTriggerButton 
          "
        disabled={true}
        onClick={[Function]}
        title="Cannot trigger an update while resource is updating or update is pending."
      />
    </li>
    <li
      className="sc-AxgMl kiZofC  isBuilding"
    >
      <a
        className="sc-AxheI bUZbcE SidebarItem-link"
        href="/r/snack"
        onClick={[Function]}
        title="snack"
      >
        <div
          className="sc-AxjAm hcburE isBuilding"
        >
          <span
            className="sc-AxirZ feYmtM"
          >
            1
          </span>
        </div>
        <p
          className="sc-AxmLO bqHpRS"
        >
          <span
            className="sc-fzozJi jcfBR"
          >
            snack
          </span>
        </p>
        <div
          className="sc-fzoLsD fjbaZw"
        >
          <span
            className="sc-fzplWN jEKYIa isEmpty"
          >
            —
          </span>
          <span
            className="sc-fzpans clZIwH isEmpty"
          >
            —
          </span>
        </div>
      </a>
      <button
        className="sc-AxiKw gOpblw SidebarTriggerButton 
          "
        disabled={true}
        onClick={[Function]}
        title="Cannot trigger an update while resource is updating or update is pending."
      />
    </li>
  </ul>
</nav>
`;
